--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,12 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
-    - javac BuildMain.java
-    - java BuildMain
+    - sudo apt-get install build-essential zip unzip openjdk-8-jdk 
+    - sudo libX11-dev libxext-dev libxrender-dev libxtst-dev libxt-dev 
+    - sudo libfreetype6-dev libcups2-dev libasound2-dev ccache g++-4.7-multilib libffi-dev
+    - sudo hg clone http://hg.openjdk.java.net/jdk9/jdk9 jdk9
+    - sudo cd jdk9
+    - sudo chmod u+x get_source.sh
+    - sudo ./get_source.sh
+    - sudo bash configure --disable-warnings-as-errors
 
-  
