--- a/circle.yml
+++ b/circle.yml
@@ -15,8 +15,8 @@ dependencies:
   pre:
     - sudo apt-get update
     - sudo apt-get install build-essential zip unzip
-    - sudo apt-get install libX11-dev libxext-dev libxrender-dev libxtst-dev libxt-dev 
-    - sudo apt-get install libfreetype6-dev libcups2-dev libasound2-dev ccache g++-4.7-multilib libffi-dev
+    - sudo apt-get install libX11-dev libxext-dev libxrender-dev libxtst-dev libxt-dev
+    - sudo apt-get install libfreetype6-dev libcups2-dev libasound2-dev ccache libffi-dev
     - sudo hg clone http://hg.openjdk.java.net/jdk9/jdk9 jdk9
     - sudo cd jdk9
     - sudo chmod u+x get_source.sh
