--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,7 @@ dependencies:
     - sudo apt-get install libfreetype6-dev libcups2-dev libasound2-dev ccache libffi-dev
     - sudo hg clone http://hg.openjdk.java.net/jdk9/jdk9 jdk9
     - cd jdk9
-    - sudo chmod u+x get_source.sh
-    - sudo ./get_source.sh
-    - sudo bash configure --disable-warnings-as-errors
+    - chmod u+x get_source.sh
+    - ./get_source.sh
+    - bash configure --disable-warnings-as-errors
 
