Testing dir command

--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,7 @@ dependencies:
     - sudo apt-get install libfreetype6-dev libcups2-dev libasound2-dev ccache libffi-dev
     - sudo hg clone http://hg.openjdk.java.net/jdk9/jdk9 jdk9
     - cd jdk9
+    - dir
     - chmod u+x get_source.sh
     - ./get_source.sh
     - bash configure --disable-warnings-as-errors
