--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,7 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
+    - sudo apt-get install mercurial
     - sudo apt-get update
     - sudo apt-get install build-essential zip unzip
     - sudo apt-get install libX11-dev libxext-dev libxrender-dev libxtst-dev libxt-dev
